Add instructions on main

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem break down\n"
+    "# Breakdown do problema\n",
+    "\n",
+    "1. Coletar informações de uma ação no Yahoo Finance\n",
+    "2. Realizar algumas análises de um período de 6 meses desta ação\n",
+    "3. Enviar um e-mail com as análises realizadas\n"
    ]
   },
   {
