feat: Add e-mail automation

--- a/main.ipynb
+++ b/main.ipynb
@@ -312,7 +312,7 @@
     "Cotação atual: R${round(atual,2)}\n",
     "\n",
     "Atenciosamente,\n",
-    "(SEU NOME).\n",
+    "(SEU NOME). ---> Em caso de conter assinatura apenas remova\n",
     "\"\"\"\n"
    ]
   },
@@ -322,20 +322,79 @@
    "source": [
     "### Automatizando o processo de envio de e-mail\n",
     "\n",
-    "> OBSERVAÇÃO IMPORTANTE: PARA RODAR ESTA AUTOMAÇÃO DEVE SER UTILIZADO O JUPYPER NOTEBOOK (NÃO A EXTENSÃO VSCODE) POIS "
+    "> OBSERVAÇÃO IMPORTANTE: Para OS Windows é necessário subsituir as teclas de atalho para MacOS conforme descrito em: https://pyautogui.readthedocs.io/en/latest/keyboard.html. Caso não funcione as opções de clique utilize a função ao final deste código para pegar o posicionamento do mouse no seu tamanho e resolução de tela."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(x=1309, y=1047)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Codigo para capturar posição do mouse\n",
+    "time.sleep(5)\n",
+    "pyautogui.position(x=1309, y=1047)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyautogui.PAUSE = 3\n",
+    "import time\n",
+    "pyautogui.PAUSE = 2\n",
     "\n",
-    "pyautogui.hotkey(\"cmd\", \"space\")\n",
+    "#instruções para MacOS\n",
+    "pyautogui.hotkey(\"command\", \"space\")\n",
     "pyautogui.write(\"chrome\")\n",
-    "pyautogui.press(\"enter\")"
+    "pyautogui.press(\"tab\")\n",
+    "pyautogui.press(\"enter\")\n",
+    "pyautogui.hotkey(\"command\", \"t\")\n",
+    "\n",
+    "pyperclip.copy(\"www.gmail.com\")\n",
+    "pyautogui.hotkey(\"command\", \"v\")\n",
+    "pyautogui.press(\"enter\")\n",
+    "\n",
+    "\n",
+    "time.sleep(8)\n",
+    "#Clicar em enviar\n",
+    "pyautogui.click(x=86, y=291)\n",
+    "\n",
+    "# Preenchendo o destinatário\n",
+    "pyperclip.copy(destinatario)\n",
+    "pyautogui.hotkey(\"command\", \"v\")\n",
+    "pyautogui.press(\"tab\")\n",
+    "\n",
+    "# Preenchendo o assunto\n",
+    "pyperclip.copy(assunto)\n",
+    "pyautogui.hotkey(\"command\", \"v\")\n",
+    "pyautogui.press(\"tab\")\n",
+    "\n",
+    "# Preenchendo a mensagem\n",
+    "pyperclip.copy(mensagem)\n",
+    "pyautogui.hotkey(\"command\", \"v\")\n",
+    "\n",
+    "# Enviar mensagem\n",
+    "pyautogui.click(x=1309, y=1047)\n",
+    "\n",
+    "# Fechar aba\n",
+    "pyautogui.hotkey(\"command\", \"w\")\n",
+    "\n",
+    "# Imprimir mensagem de enviado com sucesso\n",
+    "print('E-mail enviado com sucesso!')"
    ]
   }
  ],
