chore: Change To email address

--- a/main.ipynb
+++ b/main.ipynb
@@ -299,7 +299,7 @@
     }
    ],
    "source": [
-    "destinatario = \"gusgprado@gmail.com\"\n",
+    "destinatario = \"<seuemailaqui>@gmail.com\"\n",
     "assunto = f\"Analise diária - {ticker}\"\n",
     "\n",
     "mensagem = f\"\"\"\n",
